added text animation

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
-.App h1 {
+h1 {
   font-size: 50px;
   text-align: center;
   margin: 30px 0;
-}
-
-.App h2 {
-  font-size: 25px;
-  text-align: center;
 }
