--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  background: linear-gradient(
-    110.5deg,
-    rgba(248, 196, 249, 0.66) 22.8%,
-    rgba(253, 122, 4, 0.15) 64.6%
-  );
+  margin: 40px 0;
+  font-family: monospace;
+  background-image: url(dictionarybackground.jpg);
+  background-size: cover;
   text-align: center;
-  margin: 30px 0;
 }
