--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@ body {
   margin: 40px 0;
   font-family: monospace;
   background-image: url(dictionarybackground.jpg);
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
 }
