--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,15 @@ h1 {
 Typical {
   font-size: 40px;
 }
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 35px;
+    text-align: center;
+    line-height: 0.6;
+  }
+
+  form {
+    text-align: center;
+  }
+}
