set background img to none for mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@ body {
   background-size: cover;
   text-align: center;
 }
+
+@media (max-width: 900px) {
+  body {
+    background-image: none;
+  }
+}
