--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,24 +1,26 @@
 .Phonetic {
   margin: 20px 0;
 }
-
 .Phonetic a {
-  border: 1px solid #ddd;
+  border: 1px solid #0d47a1;
   text-decoration: none;
-  padding: 8px 15px;
-  font-size: 13px;
-  font-weight: bold;
+  color: #0d47a1;
+  padding: 8px 20px;
   margin-right: 10px;
   border-radius: 20px;
   transition: all 150ms ease-in-out;
-}
-
-.Phonetic a:hover {
-  background: purple;
-  color: white;
-}
-
-.Phonetic .text {
-  opacity: 0.5;
+  font-size: 13px;
   font-weight: bold;
+}
+.Phonetic a:hover {
+  background: #0d47a1;
+  color: #fff;
+}
+.Phonetic .text {
+  font-size: 18px;
+  opacity: 0.7;
+  font-weight: bold;
+}
+.Phonetic .audio-player {
+  margin: 10px 0;
 }
