added photos component and api

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@ Typical {
   font-size: 40px;
 }
 
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 35px;
