--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ Typical {
   margin: 0 auto;
 }
 
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 10px;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 35px;
