--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,11 +1,13 @@
 .Synonyms {
-  margin: 15px 0 0;
+  margin: 15px 0;
   padding: 0;
+  color: gray;
+  font-style: italic;
 }
-
-.Synonyms li {
+.Synonyms span {
+  padding: 8px;
+  font-weight: bold;
   font-size: 13px;
   display: inline-block;
-  padding-right: 10px;
   line-height: 1;
 }
