--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 40px 0;
   font-family: monospace;
-  background-image: url(dictionarybackground.jpg);
+  background-image: url(bookbackground2.jpg);
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
