--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,7 +2,7 @@
   background: white;
   padding: 30px;
   border-radius: 6px;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 10%);
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 10%);
   margin: 20px 0;
 }
 
@@ -10,7 +10,7 @@
   width: 100%;
   border-radius: 6px;
   padding: 6px 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #07afb8;
   color: black;
 }
 
