--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,7 +2,7 @@
   background: white;
   padding: 30px;
   border-radius: 6px;
-  box-shadow: 0px 8px 8px rgba(0, 0, 0, 10%);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 10%);
   margin: 20px 0;
 }
 
@@ -17,4 +17,12 @@
 .Dictionary .hint {
   font-size: 11px;
   margin-top: 5px;
+}
+
+.Dictionary input.visited {
+  outline: 2px solid #07afb8;
+}
+
+.Dictionary input:focus {
+  outline: 2px solid #07afb8;
 }
