--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,15 +2,14 @@
   background: white;
   padding: 30px;
   border-radius: 6px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 10%);
   margin: 20px 0;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 10%);
 }
 
 .Dictionary input {
   width: 100%;
   border-radius: 6px;
   padding: 6px 10px;
-  border: 1px solid #07afb8;
   color: black;
 }
 
@@ -20,9 +19,9 @@
 }
 
 .Dictionary input.visited {
-  outline: 2px solid #07afb8;
+  outline: 2px solid black;
 }
 
 .Dictionary input:focus {
-  outline: 2px solid #07afb8;
+  outline: 2px solid black;
 }
