--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,7 +3,7 @@
   padding: 30px;
   border-radius: 6px;
   margin: 20px 0;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 10%);
+  box-shadow: 5px 5px 5px rgba(110, 109, 109, 0.1);
 }
 
 .Dictionary input {
